# opentdx

./: CHANGELOG.md  README.md  pyproject.toml
doc/: advanced_client_guide.md  parser_reference.md  tdxclient_guide.md
opentdx/: __init__.py  const.py  tdxClient.py
opentdx/client/: MacQuotationClient.py  macMixin.py  macQuotationClient.py  standardClient.py
opentdx/commands/: doc_demo.py
opentdx/parser/ex_quotation/: kline.py
opentdx/parser/mac_quotation/: __init__.py  symbol_bar.py
opentdx/parser/quotation/: kline_offset.py
opentdx/utils/: bitmap.py  help.py
