[project]
name = "opentdx"
version = "0.2.3"
description = "TDX stock data client — A股/期货/港股/美股行情数据接口"
authors = [{ name = "LisonEvf", email = "lisonevf@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["stock", "tdx", "quant", "finance", "trading", "A-share", "futures"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas",
    "numpy",
    "click"
]

[project.urls]
Homepage = "https://github.com/LisonEvf/opentdx"
Repository = "https://github.com/LisonEvf/opentdx.git"
Issues = "https://github.com/LisonEvf/opentdx/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["opentdx*"]

[project.scripts]
opentdx = "opentdx.cli:cli"
